# llm_for_ts_electricity_prices_forecasting

./: .gitignore  LLMTS.py  Mackey-Glass.py  README.md  TSpredictor.py  activate_cuda.sh  chronos_2_deep_dive.py  chronos_predict_autoregress.py  chronos_wrapper.py  constants.py  convert_to_arrow.py  daily_price_of_electricity.ipynb  data_analysis.py  download_city_weather.py  download_gb_prices.py  download_iberian_weather.py  download_nordpool_prices.py  download_omie_prices.py  download_pjm_prices.py  download_pjm_weather.py  evaluate_demand_forecast.py  get_all_graphs.sh  gp_playground.py  gp_wrapper.py  graph_results.py  half_hourly_price_of_electricity.ipynb  half_hourly_prices_forecasting.ipynb  half_hourly_prices_forecasting_recent.ipynb  install_reqs.sh  kickoff_everything.sh  kickoff_sliding_window.py  lstm_wrapper.py  mackey_glass_time_series.csv  noise-data.arrow  parse_results.py  playground.py  plot_training_loss.py  process_mibil_downloads.py  process_nordpool_downloads.py  pyproject.toml  (+11 more)
data/: Agile_Octopus_C_London-AGILE-22-07-22.csv  Octopus_Electric_Tracker_C_London-SILVER-24-04-03-2.csv  Untitled  agile_octopus_london.csv  agile_octopus_london_alpha_2_weeks.csv  agile_octopus_london_beta_2_weeks.csv  agile_octopus_london_delta_2_weeks.csv  day_ahead_nordpool_fr_0118_0126.csv  day_ahead_nordpool_gb_0118_1220.csv  day_ahead_pjm_34964545_0118_0118.csv  day_ahead_pjm_51291.csv  day_ahead_portugal.csv  day_ahead_portugal_multivariate.csv  day_ahead_spain.csv  day_ahead_spain_multivariate.csv  day_ahead_spain_multivariate_0118_0326.csv  holidays_portugal.csv  (+12 more)
(+4600 files in other folders)
