[project]
name = "oracle"
version = "0.1.0"
description = "Time series forecasting evaluation framework"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chronos-forecasting",
    "pandas",
    "numpy",
    "matplotlib",
    "pmdarima",
    "torch",
    "scikit-learn",
    "statsmodels",
    "scipy",
    "tqdm",
    "gluonts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wrappers"]
